--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>Micro serviço de catálogo de vídeos, feito utilizando Typescript e Loopback, utiliza ElasticSearch para armazenamento e consultas no catálogo de vídeos, parte do Codeflix.</title>
+  <title>Micro serviço de catálogo de vídeos, feito utilizando Typescript e Loopback, utiliza ElasticSearch para
+    armazenamento e consultas no catálogo de vídeos, parte do Codeflix.</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,8 @@
       text-align: center;
     }
 
-    a, a:visited {
+    a,
+    a:visited {
       color: #3f5dff;
     }
 
@@ -23,7 +25,9 @@
       margin-left: 10px;
     }
 
-    a:hover, a:focus, a:active {
+    a:hover,
+    a:focus,
+    a:active {
       color: #001956;
     }
 
@@ -58,11 +62,14 @@
         color: white;
       }
 
-      a, a:visited {
+      a,
+      a:visited {
         color: #4990e2;
       }
 
-      a:hover, a:focus, a:active {
+      a:hover,
+      a:focus,
+      a:active {
         color: #2b78ff;
       }
     }
